--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+anyhow = "1.0.86"
 clap = { version = "4.5.8", features = ["derive"] }
 config = "0.14.0"
 dotenv = "0.15.0"
 mime = "0.3.17"
+reqwest = { version = "0.12.5", features = ["json"] }
 serde = "1.0.203"
-thiserror = "1.0.61"
+serde_json = "1.0.120"
+url = "2.5.2"
