respect ratelimiting rules by github

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 STATS_GITHUB_USER = ""
-STATS_GITHUB_TOKEN = ""
+STATS_GITHUB_TOKEN = "" # github classic token with repo scope (most commits) or github fine-grained token with contents (read-only) and metadata (read-only)
 STATS_CACHE_SECONDS = 86400
 RUST_LOG="debug"
