--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,12 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-
 # Added by cargo
 /target
 
 # Env
 .env
+.env.docker
+
+# Jetbrains
+.idea/
