--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,6 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file:
-      - .env
+      - .env.docker
     ports:
       - 3001:8080
