--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0.86"
 config = "0.14.0"
 dotenv = "0.15.0"
 env_logger = "0.11.3"
-log = "0.4.22"
+log = { version = "0.4.22", features = ["kv", "kv_unstable"] }
 mime = "0.3.17"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = "1.0.203"
