--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-files = "0.6.6"
+actix-governor = "0.5.0"
 actix-web = "4"
 anyhow = "1.0.86"
 config = "0.14.0"
