--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ mime = "0.3.17"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = "1.0.203"
 serde_json = "1.0.120"
-tokio = "1.38.0"
+tokio = { version = "1.38.0", features = ["full"] }
 url = "2.5.2"
