--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ dotenv = "0.15.0"
 env_logger = "0.11.3"
 log = { version = "0.4.22" }
 mime = "0.3.17"
+openssl = { version = "0.10.66", features = ["vendored"] }
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = "1.0.203"
 serde_json = "1.0.120"
