--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "github-stats"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
@@ -13,7 +13,10 @@ dotenv = "0.15.0"
 env_logger = "0.11.3"
 log = { version = "0.4.22" }
 mime = "0.3.17"
-reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12.5", features = [
+    "json",
+    "rustls-tls",
+], default-features = false }
 serde = "1.0.203"
 serde_json = "1.0.120"
 tokio = { version = "1.38.0", features = ["full"] }
